<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.thinkme</groupId>
    <artifactId>think-in-utils</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>think-in-utils</name>
    <url>http://maven.apache.org</url>

    <parent>
        <groupId>com.thinkme</groupId>
        <artifactId>parent-pom</artifactId>
        <version>1.0</version>
    </parent>

    <modules>
        <module>core-utils</module>
        <module>lock</module>
        <module>id-generator</module>
    </modules>

    <build>
        <!-- 插件引入 -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- 打包跳过测试用例 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <!-- 打包跳过测试用例 -->
        </plugins>
    </build>
</project>
